--- a/WebAPIDemo/Properties/launchSettings.json
+++ b/WebAPIDemo/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "shirts",
+      "launchUrl": "api/shirts",
       "applicationUrl": "https://localhost:7214;http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
